[gd_scene load_steps=7 format=3 uid="uid://c1td3r0jhedwi"]

[ext_resource type="Script" path="res://addons/easycpp/scripts/settings.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/easycpp/scenes/fileedit.tscn" id="2"]
[ext_resource type="PackedScene" path="res://addons/easycpp/scenes/groupheader.tscn" id="4"]
[ext_resource type="PackedScene" path="res://addons/easycpp/scenes/tabcontrol.tscn" id="5"]
[ext_resource type="PackedScene" path="res://addons/easycpp/scenes/buildplatform.tscn" id="6"]
[ext_resource type="PackedScene" path="res://addons/easycpp/scenes/buildconfiguration.tscn" id="7"]

[node name="Settings" type="Window"]
size = Vector2i(800, 600)
script = ExtResource( "1" )

[node name="SettingsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer"]
visible = false
alignment = 2

[node name="AllSettingsButton" type="Button" parent="SettingsContainer/HBoxContainer"]
text = "Show All Settings"

[node name="TabContainer" type="TabContainer" parent="SettingsContainer"]
offset_right = 1024.0
offset_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="Control" parent="SettingsContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BatchfilesContainer" type="PanelContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer"]
offset_right = 1024.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer"]
offset_right = 1024.0
offset_bottom = 96.0

[node name="Header" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer" instance=ExtResource( "4" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1024.0
offset_bottom = 26.0
text = "Batchfiles"

[node name="GridContainer" type="GridContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 96.0
size_flags_horizontal = 3
columns = 4

[node name="LocationLabel" type="Label" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer/GridContainer"]
offset_top = 2.0
offset_right = 253.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Batchfile Location:"

[node name="LocationButton" type="OptionButton" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer/GridContainer"]
offset_left = 257.0
offset_right = 510.0
offset_bottom = 31.0
size_flags_horizontal = 3
hint_tooltip = "The location where the batchfiles will be saved to."

[node name="BuildFolderLabel" type="Label" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer/GridContainer"]
offset_left = 514.0
offset_top = 2.0
offset_right = 767.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Build Folder:"

[node name="BuildFolderEdit" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer/GridContainer" instance=ExtResource( "2" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 771.0
offset_right = 1024.0
offset_bottom = 31.0
size_flags_horizontal = 3
hint_tooltip = "The location of the build folder."
filepath = ""
filter = ""
directory = false

[node name="OverwriteCheckBox" type="CheckBox" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/BatchfilesContainer/VBoxContainer/GridContainer"]
offset_top = 35.0
offset_right = 253.0
offset_bottom = 66.0
hint_tooltip = "Defines if existing batch files should be overwritten. Can be useful when you want to edit the files."
text = "Overwrite Existing Batchfiles"

[node name="VSContainer" type="PanelContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer"]
offset_top = 100.0
offset_right = 1024.0
offset_bottom = 161.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer"]
offset_right = 1024.0
offset_bottom = 61.0

[node name="Header" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer" instance=ExtResource( "4" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1024.0
offset_bottom = 26.0
text = "Visual Studio"

[node name="GridContainer" type="GridContainer" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 61.0
size_flags_horizontal = 3
columns = 4

[node name="LocationLabel" type="Label" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer/GridContainer"]
offset_top = 2.0
offset_right = 253.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Projects Location:"

[node name="LocationButton" type="OptionButton" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer/GridContainer"]
offset_left = 257.0
offset_right = 510.0
offset_bottom = 31.0
size_flags_horizontal = 3
hint_tooltip = "The location where the batchfiles will be saved to."

[node name="SubfolderLabel" type="Label" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer/GridContainer"]
offset_left = 514.0
offset_top = 2.0
offset_right = 767.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Project Subfolder:"

[node name="SubfolderLineEdit" type="LineEdit" parent="SettingsContainer/TabContainer/Settings/VBoxContainer/VSContainer/VBoxContainer/GridContainer"]
offset_left = 771.0
offset_right = 1024.0
offset_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Build Platforms" type="Control" parent="SettingsContainer/TabContainer"]
visible = false

[node name="TabControl" parent="SettingsContainer/TabContainer/Build Platforms" instance=ExtResource( "5" )]
tabtype = ExtResource( "6" )

[node name="Build Configurations" type="Control" parent="SettingsContainer/TabContainer"]
visible = false

[node name="TabControl" parent="SettingsContainer/TabContainer/Build Configurations" instance=ExtResource( "5" )]
tabtype = ExtResource( "7" )

[node name="ButtonsContainer" type="HBoxContainer" parent="SettingsContainer"]
offset_top = 569.0
offset_right = 1024.0
offset_bottom = 600.0
alignment = 1

[node name="SaveButton" type="Button" parent="SettingsContainer/ButtonsContainer"]
offset_left = 458.0
offset_right = 502.0
offset_bottom = 31.0
text = "Save"

[node name="CancelButton" type="Button" parent="SettingsContainer/ButtonsContainer"]
offset_left = 506.0
offset_right = 566.0
offset_bottom = 31.0
text = "Cancel"

[connection signal="pressed" from="SettingsContainer/HBoxContainer/AllSettingsButton" to="." method="_on_AllSettingsButton_pressed"]
[connection signal="pressed" from="SettingsContainer/ButtonsContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="SettingsContainer/ButtonsContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
